--- a/app/src/main/res/menu/workoutlog_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/workoutlog_bottom_nav_menu.xml
@@ -3,20 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/workoutlog_bottom_nav_running"
-        android:enabled="true"
         android:title="@string/workoutlog_bottom_nav_running_title"
         android:icon="@drawable/ic_directions_run_black_24dp"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/workoutlog_bottom_nav_weights"
-        android:enabled="true"
         android:title="@string/workoutlog_bottom_nav_weights_title"
         android:icon="@drawable/ic_fitness_center_black_24dp"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/workoutlog_bottom_nav_analysis"
-        android:enabled="true"
         android:title="@string/workoutlog_bottom_nav_analysis_title"
         android:icon="@drawable/ic_trending_up_black_24dp"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 </menu>
